item dynamically created in HTML

--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,7 @@
             <h1>Show date here</h1>
         </header>
         <div class="main">
-            <ul class="list-table">
-                <li class="list-item"><input type="checkbox" name="finished-item" id="item-check"><span
-                        class="item-text">List
-                        Items</span><i class="fas fa-trash-alt trash-icon"></i></li>
-                <li class="list-item"><input type="checkbox" name="finished-item" id="item-check"><span
-                        class="item-text">List
-                        Items</span><i class="fas fa-trash-alt trash-icon"></i></li>
-                <li class="list-item"><input type="checkbox" name="finished-item" id="item-check"><span
-                        class="item-text">List
-                        Items</span><i class="fas fa-trash-alt trash-icon"></i></li>
+            <ul id="list-table" class="list-table">
             </ul>
         </div>
         <div class="input-container">
